crates/lm-parser/src/snapshots/lm_parser__tests__precedence_logical.snap
---
source: crates/lm-parser/src/tests.rs
expression: result
---
=== AST ===
{
  "decls": [
    {
      "kind": {
        "type": "LetDef",
        "name": "x",
        "type_annotation": null,
        "value": {
          "kind": {
            "type": "BinaryOp",
            "op": "Or",
            "lhs": {
              "kind": {
                "type": "BinaryOp",
                "op": "And",
                "lhs": {
                  "kind": {
                    "type": "Ident",
                    "name": "a"
                  },
                  "span": {
                    "file_id": 0,
                    "start": 8,
                    "end": 9
                  }
                },
                "rhs": {
                  "kind": {
                    "type": "Ident",
                    "name": "b"
                  },
                  "span": {
                    "file_id": 0,
                    "start": 13,
                    "end": 14
                  }
                }
              },
              "span": {
                "file_id": 0,
                "start": 8,
                "end": 14
              }
            },
            "rhs": {
              "kind": {
                "type": "Ident",
                "name": "c"
              },
              "span": {
                "file_id": 0,
                "start": 18,
                "end": 19
              }
            }
          },
          "span": {
            "file_id": 0,
            "start": 8,
            "end": 19
          }
        }
      },
      "span": {
        "file_id": 0,
        "start": 0,
        "end": 20
      }
    }
  ],
  "span": {
    "file_id": 0,
    "start": 0,
    "end": 20
  }
}
