crates/lm-parser/src/snapshots/lm_parser__tests__string_literal.snap
---
source: crates/lm-parser/src/tests.rs
expression: result
---
=== AST ===
{
  "decls": [
    {
      "kind": {
        "type": "LetDef",
        "name": "x",
        "type_annotation": null,
        "value": {
          "kind": {
            "type": "Literal",
            "value": {
              "kind": "String",
              "value": "hello"
            }
          },
          "span": {
            "file_id": 0,
            "start": 8,
            "end": 15
          }
        }
      },
      "span": {
        "file_id": 0,
        "start": 0,
        "end": 16
      }
    }
  ],
  "span": {
    "file_id": 0,
    "start": 0,
    "end": 16
  }
}
