crates/lm-parser/src/snapshots/lm_parser__tests__type_def_with_type_params.snap
---
source: crates/lm-parser/src/tests.rs
expression: result
---
=== AST ===
{
  "decls": [
    {
      "kind": {
        "type": "TypeDef",
        "name": "Result",
        "type_params": [
          "T",
          "E"
        ],
        "variants": [
          {
            "name": "Ok",
            "fields": [
              {
                "kind": {
                  "type": "Name",
                  "name": "T"
                },
                "span": {
                  "file_id": 0,
                  "start": 29,
                  "end": 30
                }
              }
            ],
            "span": {
              "file_id": 0,
              "start": 26,
              "end": 31
            }
          },
          {
            "name": "Err",
            "fields": [
              {
                "kind": {
                  "type": "Name",
                  "name": "E"
                },
                "span": {
                  "file_id": 0,
                  "start": 42,
                  "end": 43
                }
              }
            ],
            "span": {
              "file_id": 0,
              "start": 38,
              "end": 44
            }
          }
        ]
      },
      "span": {
        "file_id": 0,
        "start": 0,
        "end": 44
      }
    }
  ],
  "span": {
    "file_id": 0,
    "start": 0,
    "end": 44
  }
}
