crates/lm-parser/src/snapshots/lm_parser__tests__unary_not.snap
---
source: crates/lm-parser/src/tests.rs
expression: result
---
=== AST ===
{
  "decls": [
    {
      "kind": {
        "type": "LetDef",
        "name": "x",
        "type_annotation": null,
        "value": {
          "kind": {
            "type": "UnaryOp",
            "op": "Not",
            "operand": {
              "kind": {
                "type": "Literal",
                "value": {
                  "kind": "Bool",
                  "value": true
                }
              },
              "span": {
                "file_id": 0,
                "start": 9,
                "end": 13
              }
            }
          },
          "span": {
            "file_id": 0,
            "start": 8,
            "end": 13
          }
        }
      },
      "span": {
        "file_id": 0,
        "start": 0,
        "end": 14
      }
    }
  ],
  "span": {
    "file_id": 0,
    "start": 0,
    "end": 14
  }
}
