crates/lm-parser/src/snapshots/lm_parser__tests__variant_construct.snap
---
source: crates/lm-parser/src/tests.rs
expression: result
---
=== AST ===
{
  "decls": [
    {
      "kind": {
        "type": "LetDef",
        "name": "x",
        "type_annotation": null,
        "value": {
          "kind": {
            "type": "VariantConstruct",
            "name": "Circle",
            "args": [
              {
                "kind": {
                  "type": "Literal",
                  "value": {
                    "kind": "Float",
                    "value": 5.0
                  }
                },
                "span": {
                  "file_id": 0,
                  "start": 15,
                  "end": 18
                }
              }
            ]
          },
          "span": {
            "file_id": 0,
            "start": 8,
            "end": 19
          }
        }
      },
      "span": {
        "file_id": 0,
        "start": 0,
        "end": 20
      }
    }
  ],
  "span": {
    "file_id": 0,
    "start": 0,
    "end": 20
  }
}
