crates/lm-parser/src/snapshots/lm_parser__tests__variant_construct_unit.snap
---
source: crates/lm-parser/src/tests.rs
expression: result
---
=== AST ===
{
  "decls": [
    {
      "kind": {
        "type": "LetDef",
        "name": "x",
        "type_annotation": null,
        "value": {
          "kind": {
            "type": "VariantConstruct",
            "name": "None",
            "args": []
          },
          "span": {
            "file_id": 0,
            "start": 8,
            "end": 12
          }
        }
      },
      "span": {
        "file_id": 0,
        "start": 0,
        "end": 13
      }
    }
  ],
  "span": {
    "file_id": 0,
    "start": 0,
    "end": 13
  }
}
